# <타입> : <제목> 형식으로 작성하며 제목은 최대 50글자 정도로만 입력 # 제목을 아랫줄에 작성, 제목 끝에 마침표 금지, 무엇을 했는지 명확하게 작성 feat : 상품 등록 api ################ # 본문(추가 설명)을 아랫줄에 작성 상품 등록 api 구현 완료 아직 미구현은 이미지 저장 추후 s3 셋팅 후 작업할 예정 ################ # 꼬릿말(footer)을 아랫줄에 작성 (관련된 이슈 번호 등 추가) #30 ################ # feature : 새로운 기능 추가 # fix : 버그 수정 # docs : 문서 수정 # test : 테스트 코드 추가 # refactor : 코드 리팩토링 # style : 코드 의미에 영향을 주지 않는 변경사항 # chore : 빌드 부분 혹은 패키지 매니저 수정사항 ################
