# src/docs/swagger.yaml
@@ -101,12 +101,62 @@ paths:
       summary: google 로그아웃
       tags:
       - auth
-  /v0.1/feature/product:
+  /v0.1/features/product:
     post:
       description: |-
         ■ errCode with 500
         INTERNAL_SERVER : 내부 로직 처리 실패
         INTERNAL_DB : DB 처리 실패
+      parameters:
+      - description: accessToken
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: description
+        in: formData
+        name: description
+        required: true
+        type: string
+      - description: category
+        in: formData
+        name: category
+        required: true
+        type: string
+      - description: image
+        in: formData
+        name: image
+        type: file
+      - description: perAmount
+        in: formData
+        name: perAmount
+        required: true
+        type: integer
+      - description: totalCount
+        in: formData
+        name: totalCount
+        required: true
+        type: integer
+      - description: restCount
+        in: formData
+        name: restCount
+        required: true
+        type: integer
+      - description: startDate
+        in: formData
+        name: startDate
+        required: true
+        type: integer
+      - description: endDate
+        in: formData
+        name: endDate
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -124,5 +174,5 @@ paths:
             $ref: '#/definitions/errorCommon.ResError'
       summary: 상품 등록
       tags:
-      - auth
+      - product/register
 swagger: "2.0"
